--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Run Cypress via its module API inside an express server",
   "scripts": {
-    "start": "node ./e2e-tests"
+    "start": "node server.js",
+    "cy:open": "cypress open > /dev/null"
   },
   "dependencies": {
     "cypress": "^5.6.0",
@@ -18,6 +19,7 @@
     "mochawesome-report-generator": "^5.1.0"
   },
   "devDependencies": {
-    "eslint": "^7.13.0"    
+    "@testing-library/cypress": "^7.0.1",
+    "eslint": "^7.13.0"
   }
 }
