--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "dependencies": {
     "cypress": "^5.6.0",
     "express": "^4.17.1",
+    "express-healthcheck": "^0.1.0",
     "express-prom-bundle": "^6.2.0",
     "fs-extra": "^9.0.1",
-    "node-cron": "^2.0.3",
-    "prom-client": "^12.0.0",
-    "serve-index": "^1.9.1",
     "mochawesome": "^6.2.1",
     "mochawesome-merge": "^4.2.0",
-    "mochawesome-report-generator": "^5.1.0"
+    "mochawesome-report-generator": "^5.1.0",
+    "prom-client": "^12.0.0",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {
     "@testing-library/cypress": "^7.0.1",
