--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "cy:open": "cypress open > /dev/null"
   },
   "dependencies": {
-    "cypress": "^5.6.0",
+    "cypress": "^12.13.0",
     "express": "^4.17.1",
     "express-healthcheck": "^0.1.0",
     "express-prom-bundle": "^6.2.0",
     "fs-extra": "^9.0.1",
-    "mochawesome": "^6.2.1",
+    "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.0",
-    "mochawesome-report-generator": "^5.1.0",
+    "mochawesome-report-generator": "^6.2.0",
     "prom-client": "^12.0.0",
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^7.0.1",
-    "eslint": "^7.13.0"
+    "chai-json-schema": "^1.5.1",
+    "cy-spok": "^1.5.2",
+    "cypress-plugin-api": "^2.11.1",
+    "eslint": "^7.13.0",
+    "typescript": "^4.4.3"
   }
 }
