--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "cy:open": "cypress open > /dev/null"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^1.4.0",
     "cypress": "^12.13.0",
     "express": "^4.17.1",
     "express-healthcheck": "^0.1.0",
